--- a/package.json
+++ b/package.json
@@ -10,22 +10,36 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/camera": "^6.2.0",
+    "@azure/cognitiveservices-customvision-prediction": "^5.1.2",
+    "@capacitor/app": "4.1.1",
+    "@capacitor/core": "4.6.1",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/keyboard": "4.1.0",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@studiometa/vue-mapbox-gl": "^2.0.2",
     "axios": "^1.2.1",
+    "cordova-plugin-camera": "^6.0.0",
     "core-js": "^3.6.5",
+    "filepond": "^4.30.4",
     "ionicons": "^6.0.3",
     "mapbox-gl": "^2.11.1",
+    "simple-vue-camera": "^1.1.3",
     "swiper": "^8.4.5",
+    "uploadcare-widget": "^3.21.0",
+    "uploadcare-widget-tab-effects": "^1.6.0",
     "vue": "^3.2.21",
     "vue-axios": "^3.5.2",
+    "vue-filepond": "^7.0.3",
     "vue-router": "^4.0.12",
     "vue-yandex-maps": "^0.12.3",
     "vue3-google-map": "^0.15.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "4.6.1",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
