--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@awesome-cordova-plugins/camera": "^6.2.0",
     "@azure/cognitiveservices-customvision-prediction": "^5.1.2",
+    "@capacitor/android": "^4.6.1",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.1",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
+    "@ditdot-dev/vue-flow-form": "^2.3.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
@@ -35,8 +37,10 @@
     "vue-axios": "^3.5.2",
     "vue-filepond": "^7.0.3",
     "vue-router": "^4.0.12",
+    "vue-upload-component": "^3.1.6",
     "vue-yandex-maps": "^0.12.3",
-    "vue3-google-map": "^0.15.0"
+    "vue3-google-map": "^0.15.0",
+    "vue3-lottie": "^2.4.0"
   },
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
